Update styles to fix dark mode (#115)

--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -44,9 +44,3 @@
     @apply h-full;
   }
 }
-
-@layer utilities {
-  :root {
-    color-scheme: light;
-  }
-}
